Bug 326578 -  [Intro] RTL Welcome with links can cause overlap on hover

--- a/org.eclipse.ui.intro.universal/themes/circles/html/rtl.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/rtl.css
@@ -12,10 +12,7 @@
 /* 
  * This file contains styles that are specific to right to left display
  */
- 
-body {
-    direction: rtl;
-}
+
 
 table {
     direction: rtl;
